manifests/traefik/dashboard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    homelab.io/expose: "internal"
    homelab.io/host: "traefik.elmstreet79.de"
spec:
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  ports:
    - name: dashboard
      port: 9000
      targetPort: 9000
      protocol: TCP
