manifests/traefik/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    pangolin.io/expose: "true"
    pangolin.io/subdomain: "traefik"
    pangolin.io/auth: "true"
